--- a/week-04/day-04/gallery/src/App.css
+++ b/week-04/day-04/gallery/src/App.css
@@ -81,11 +81,34 @@ body {
 }
 
 .thumbnails {
-  display: flex;
-  justify-content: center;
-  margin-top: 32px;
+  margin-top: 16px;
+  padding: 16px 8px;
+  overflow-y: overlay;
 }
-
+.thumbnails::-webkit-scrollbar-track {
+  background: transparent;
+}
+.thumbnails::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+.thumbnails::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background: transparent;
+}
+.thumbnails:hover::-webkit-scrollbar-thumb {
+  background: rgba(0,0,0,.1);
+}
+.thumbnails::-webkit-scrollbar-button {
+  display: none;
+}
+.thumbnails-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: fit-content;
+  padding-right: 12px;
+}
 .thumbnail {
   width: 100px;
   height: 100px;
