--- a/week-04/day-04/gallery/src/App.css
+++ b/week-04/day-04/gallery/src/App.css
@@ -85,7 +85,10 @@ body {
   margin-top: 16px;
   padding: 16px 8px;
   overflow-y: auto;
+  display: flex;
+  justify-content: flex-start;
 }
+
 .thumbnails::-webkit-scrollbar-track {
   background: transparent;
 }
@@ -107,11 +110,11 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: fit-content;
   padding-right: 12px;
 }
 .thumbnail {
   width: 100px;
+  flex: 1;
   min-width: 100px;
   height: 100px;
   cursor: pointer;
