--- a/week-05/day-02/event-registration-app/src/App.css
+++ b/week-05/day-02/event-registration-app/src/App.css
@@ -16,12 +16,20 @@ ul {
   margin: 0;
 }
 
+h1 {
+  margin: 8px 0;
+}
+
 form {
   display: flex;
   flex-direction: column;
+  border: 2px solid #333;
+  padding: 16px;
+  box-shadow: 1px 2px 10px rgba(0,0,0,.3);
 }
 
 label {
   display: flex;
   justify-content: space-between;
+  margin: 8px 0;
 }
