--- a/week-05/day-03/my-chat-client/src/App.css
+++ b/week-05/day-03/my-chat-client/src/App.css
@@ -69,11 +69,13 @@ body {
 }
 
 .message {
-  padding: 8px;
+  display: flex;
+  flex-direction: column;
   width: fit-content;
   background-color: #ffffff;
   border: 1px solid rgba(0,0,0,.1);
-  border-radius: 5px;
+  border-radius: 15px;
+  border-top-left-radius: 5px;
   max-width: 300px;
 }
 
@@ -85,21 +87,49 @@ body {
   background-color: #f5f5f5;
 }
 
-.message.green {
+.message.right {
   align-self: flex-end;
-  background-color: #98e165;
   border: none;
+}
+
+.message .message-content {
+  padding: 8px;
+  padding-bottom: 0;
+}
+
+.message .message-meta {
+  color: #666;
+  padding: 2px 16px;
+  font-size: 12px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .button {
   border: none;
   outline: none;
   padding: 2px 6px;
-  color: rgba(0,0,0, .5);
+  color: #000;
   cursor: pointer;
   background-color: transparent;
   border-radius: 3px;
   border: 1px solid rgba(0,0,0,.1);
+  transition: color .2s ease-out, background-color .2s ease-out;
+}
+
+.button.circle {
+  color: gray;
+  border: none;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: initial;
+}
+
+.button.circle:hover {
+  color: #000;
+  background-color: initial;
+  /* background-color: rgba(0,0,0,.05); */
 }
 
 .button + .button {
@@ -111,9 +141,11 @@ body {
 }
 
 .message-sender {
+  padding-top: 32px;
   display: flex;
   position: relative;
   overflow: hidden;
+  border-top: 1px solid rgba(0,0,0,.1);
   background-color: #f5f5f5;
   transition: background-color .2s ease-out;
   border-bottom-left-radius: inherit;
@@ -128,7 +160,6 @@ textarea {
   min-height: 120px;
   padding: 12px;
   padding-bottom: 32px;
-  border-top: 1px solid rgba(0,0,0,.1);
   background-color: transparent;
 }
 
@@ -137,6 +168,15 @@ textarea {
 }
 
 .message-sender .toolbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: flex-start;
+}
+
+.message-sender .toolbar-bottom {
   padding: 12px;
   position: absolute;
   bottom: 0;
