--- a/week-05/day-04/cocktails/views/home.ejs
+++ b/week-05/day-04/cocktails/views/home.ejs
@@ -7,13 +7,7 @@
   </head>
   <body>
     <h1>Cocktails</h1>
-    <ul>
-      <li>ALL</li>
-      <li>GIN</li>
-      <li>VODKA</li>
-      <li>RUM</li>
-      <li>TEQUILA</li>
-    </ul>
+    <%- include('partials/nav', { alcoholList }) %>
     <table>
       <thead>
         <tr>
