--- a/week-06/day-02/bookstore/views/book_titles.ejs
+++ b/week-06/day-02/bookstore/views/book_titles.ejs
@@ -11,7 +11,7 @@
 <body>
   <ul class="ui list">
     <% books.forEach(book => { _%>
-      <li><%= book.book_name %></li>
+      <li><%= book.title %></li>
     <% }) _%>
   </ul>
 </body>
