--- a/week-06/project/chat-client/src/App.css
+++ b/week-06/project/chat-client/src/App.css
@@ -10,6 +10,8 @@ html, body, #root {
 
 body {
   background-color: #f5f5f5;
+  background-image: url(./assets/bg.jpg);
+  background-size: cover;
 }
 
 *::-webkit-scrollbar-track {
@@ -48,6 +50,7 @@ body {
   border: 1px solid rgba(0,0,0,.2);
   border-radius: 5px;
   position: relative;
+  box-shadow: 0 2px 10px #999;
 }
 
 .message-room {
@@ -154,12 +157,13 @@ body {
   border-top: 1px solid rgba(0,0,0,.1);
   background-color: #f5f5f5;
   transition: background-color .2s ease-out;
-  border-bottom-left-radius: inherit;
   border-bottom-right-radius: inherit;
 }
+
 .message-sender .toolbar {
   padding: 8px;
 }
+
 textarea {
   border: none;
   outline: none;
@@ -168,6 +172,7 @@ textarea {
   min-height: 120px;
   padding: 12px;
   padding-bottom: 32px;
+  font-family: sans-serif;
   background-color: transparent;
 }
 
@@ -194,7 +199,6 @@ textarea {
   justify-content: flex-end;
 }
 
-
 .sidebar {
   opacity: .95;
   color: #fff;
@@ -202,19 +206,123 @@ textarea {
   background-color: #272a2d;
 }
 
-.room-list {
-  padding-top: 70px;
-  width: 320px;
+.rooms {
+  width: 232px;
   background-color: #eeebe9;
   border-right: 1px solid rgba(0,0,0,.1);
+  display: flex;
+  flex-direction: column;
+}
+
+.room-header {
+  padding: 20px 12px 14px;
+}
+
+.room-searcher {
+  display: flex;
+  align-content: center;
+  background-color: rgba(0,0,0,.05);
+  border-radius: 3px;
+  padding: 6px;
+  transition: background-color .2s ease-out;
+}
+
+.room-searcher .fa {
+  color: gray;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+}
+
+.room-searcher input {
+  flex: 1;
+  border: none;
+  outline: none;
+  font-size: 12px;
+  padding-left: 4px;
+  background: transparent;
+}
+
+.room-searcher:focus-within {
+  background-color: #fff;
+}
+
+.room-list {
+  width: 100%;
 }
 
 main {
-  width: 100%;
+  flex: 1;
+  border-radius: inherit;
+  background-color: #f5f5f5;
 }
 
 .room {
+  cursor: pointer;
   height: 60px;
   width: 100%;
   background-color: rgba(0,0,0,.03);
+  display: flex;
+  flex-direction: row;
+}
+
+.room .room-image {
+  padding: 12px;
+  width: 60px;
+  height: 100%;
+}
+
+.room .room-info {
+  width: calc(100% - 60px);
+  padding-top: 12px;
+  overflow: hidden;
+}
+
+.room .room-title {
+  font-size: 14px;
+}
+
+.room .room-description {
+  display: block;
+  font-size: 12px;
+  color: gray;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.room:hover {
+  background-color: rgba(0,0,0,.05);
+}
+
+img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.sidebar-header {
+  padding-top: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.sidebar-header .navigation {
+  padding-top: 18px;
+  display: flex;
+  justify-content: center;
+}
+
+.sidebar-header .navigation img {
+  cursor: pointer;
+}
+
+.sidebar-header .avatar {
+  padding: 12px;
+}
+
+.sidebar-header img {
+  border-radius: 2px;
 }
