--- a/week-07/project/client/src/App.css
+++ b/week-07/project/client/src/App.css
@@ -34,6 +34,12 @@ ul, ol, li {
   list-style: none;
 }
 
+textarea {
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
 table {
   border-collapse: collapse;
 }
@@ -82,106 +88,10 @@ th, td {
   height: 176px;
 }
 
-.post-list {
-  padding: 20px 24px;
-  width: 640px;
-}
-
-.post-list .post {
-  cursor: pointer;
-  overflow: hidden;
+.fa {
   display: flex;
-  flex-direction: row;
-  background-color: rgba(255, 255, 255, .8);
-  border-radius: 4px;
-  padding-left: 40px;
-  position: relative;
-  border: 1px solid transparent;
-}
-
-.post-list .post:hover {
-  border: 1px solid #000;
-}
-
-.post-list .post + .post {
-  margin-top: 10px;
-}
-
-.post .post-vote {
-  border-top-left-radius: inherit;
-  border-bottom-left-radius: inherit;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  width: 40px;
-  height: 100%;
-  left: 0;
-  padding: 8px 4px 8px 0;
-  position: absolute;
-  top: 0;
-  background-color: #d7d8d9;
-}
-
-.post .post-vote span {
-  text-align: center;
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 16px;
-  pointer-events: none;
-  word-break: normal;
-  color: #1a1a1b;
-}
-
-.post .post-content {
-  padding-top: 8px;
-  padding-left: 10px;
-  width: 100%;
-  background-color: #fff;
-  border-top-right-radius: inherit;
-  border-bottom-right-radius: inherit;
-}
-
-.post-content .post-title {
-  font-weight: bold;
-  font-size: 18px;
-  color: #222;
-}
-.post .post-link {
-  display: flex;
-}
-
-.post-link a {
-  font-size: 12px;
-  color: #646d73;
-  font-weight: 400;
-  line-height: 16px;
-  margin: 4px 0;
-  max-width: 125px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.post-link a:hover {
-  text-decoration: underline;
-}
-
-.post .post-action {
-  display: flex;
-  flex-direction: row;
-  padding-top: 22px;
-  padding-bottom: 8px;
-}
-.post .post-action span {
-  cursor: pointer;
-  font-size: 12px;
-  color: #646d73;
-}
-.post .post-action span:hover {
-  color: #222;
-}
-.post .post-action span + span {
-  margin-left: 6px;
+  justify-content: flex-start;
 }
 
 button {
@@ -195,8 +105,21 @@ button {
   width: 24px;
   height: 24px;
   display: flex;
+  color: gray;
   border-radius: 2px;
   justify-content: center;
+}
+
+.vote-button .fa {
+  justify-content: center;
+}
+
+.vote-button:hover .fa-chevron-up {
+  color: blue;
+}
+
+.vote-button:hover .fa-chevron-down {
+  color: red;
 }
 
 i {
