feat(project/client): add navigation

--- a/week-07/project/client/src/App.css
+++ b/week-07/project/client/src/App.css
@@ -22,11 +22,15 @@ body {
 
 main {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+  max-width: 800px;
+  margin: 0 auto;
 }
-
+p.error {
+  color: red;
+}
 a {
+  color: inherit;
   text-decoration: none;
 }
 
@@ -61,16 +65,22 @@ th, td {
 }
 
 .banner {
-  height: 208px;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
-.banner div {
+
+.banner div:first-child {
   width: 100%;
-  height: 100%;
+  height: 192px;
+  flex: 1;
   background: #999 url(./assets/space.jpg) no-repeat center / cover;
+  background-repeat: no-repeat;
   background-position: center top;
-  /* height: 192px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .banner .text {
@@ -78,14 +88,52 @@ th, td {
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: auto;
-  position: absolute;
-  top: 50%;
   width: 512px;
-
-  left: 50%;
-  transform: translate(-50%, -50%);
   background-image: url(./assets/text.png);
   height: 176px;
+}
+
+.banner .navigation {
+  width: 100%;
+  height: 40px;
+  background-color: #eee;
+  display: flex;
+}
+
+.banner .navigation nav {
+  font-size: 0;
+  max-width: 1600px;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  flex-grow: 1 1;
+  height: inherit;
+}
+.banner .navigation nav a {
+  height: inherit;
+  display: block;
+}
+.banner .navigation nav a {
+  cursor: pointer;
+  height: 32px;
+  line-height: 32px;
+  padding: 4px 8px 1px;
+  font-size: 14px;
+  font-weight: bold;
+  font-family: 'IBM Plex Sans', Arial, sans-serif;
+  border-bottom: 3px solid transparent;
+  transition: border-bottom .2s ease-out;
+}
+
+.banner .navigation nav a.active {
+  border-bottom: 3px solid rgb(100, 109, 115);
+}
+.banner .navigation nav a:hover {
+  border-bottom: 3px solid #333;
+}
+
+.banner .navigation nav a + a {
+  margin-left: .5rem;
 }
 
 .fa {
@@ -115,11 +163,11 @@ button {
 }
 
 .vote-button:hover .fa-chevron-up {
-  color: blue;
+  color: #2196f3;
 }
 
 .vote-button:hover .fa-chevron-down {
-  color: red;
+  color: #e91e63;
 }
 
 i {
