--- a/week-07/project/client/src/components/Login/style.css
+++ b/week-07/project/client/src/components/Login/style.css
@@ -1,5 +1,5 @@
 .login {
-  width: 420px;
+  width: 100%;
   background-color: #fff;
   border-radius: 4px;
   padding: 1rem;
@@ -25,9 +25,6 @@
 .login label {
   display: flex;
   flex-direction: column;
-}
-.login label span {
-  color: red;
 }
 
 .login-button {
